--- a/.gitignore
+++ b/.gitignore
@@ -11,7 +11,6 @@
 # next.js
 /.next/
 /out/
-
 # production
 /build
 
@@ -33,3 +32,4 @@ yarn-error.log*
 # typescript
 *.tsbuildinfo
 next-env.d.ts
+/.idea/
